[kubernetes] 调整Kubernetes client集成测试