@@ -5,7 +5,6 @@ import io.fabric8.kubernetes.api.model.NamespaceList;
 import io.hotcloud.kubernetes.ClientIntegrationTestBase;
 import io.hotcloud.kubernetes.client.http.NamespaceClient;
 import io.kubernetes.client.openapi.ApiException;
-import lombok.extern.slf4j.Slf4j;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -13,26 +12,19 @@ import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 
-/**
- * @author yaolianhua789@gmail.com
- **/
-@Slf4j
 @EnableKubernetesAgentClient
 public class NamespaceClientIT extends ClientIntegrationTestBase {
 
-    private static final String NAMESPACE = "namespace-test";
+    private static final String NAMESPACE = "jason";
 
     @Autowired
     private NamespaceClient namespaceClient;
 
     @Before
-    public void init() throws ApiException {
-        log.info("Namespace Client Integration Test Start");
+    public void before() throws ApiException {
         namespaceClient.create(NAMESPACE);
-        log.info("Create Namespace Name: '{}'", NAMESPACE);
     }
 
     @Test
@@ -43,20 +35,19 @@ public class NamespaceClientIT extends ClientIntegrationTestBase {
 
         List<String> names = items.stream()
                 .map(e -> e.getMetadata().getName())
-                .collect(Collectors.toList());
-        log.info("List Namespace Name: {}", names);
+                .toList();
+        names.forEach(System.out::println);
 
         Namespace result = namespaceClient.read(NAMESPACE);
         String name = result.getMetadata().getName();
-        Assert.assertEquals(name, NAMESPACE);
+        Assert.assertEquals(NAMESPACE, name);
 
     }
 
     @After
     public void post() throws ApiException {
         namespaceClient.delete(NAMESPACE);
-        log.info("Delete Namespace Name: '{}'", NAMESPACE);
-        log.info("Namespace Client Integration Test End");
+        printNamespacedEvents(NAMESPACE, NAMESPACE);
     }
 
 }
